Добавил Properties, убрал перегрузку, вернул Java17