@@ -1,46 +1,40 @@
 package org.ifellow.gaidukov.IF_HW5.steps;
 
 import io.restassured.RestAssured;
+import org.ifellow.gaidukov.IF_HW5.PropertyProcesser;
 import org.ifellow.gaidukov.IF_HW5.dto.Character;
 import org.ifellow.gaidukov.IF_HW5.dto.Episode;
 
+import java.util.ArrayList;
+
 public class RickAndMortyApiSteps {
+
+    PropertyProcesser prop = new PropertyProcesser();
 
     public Character getCharacterById(String id) {
         return RestAssured.given()
                 .when()
-                .get("character/" + id)
+                .get(prop.getProp("RICK_AND_MORTY_CHARACTER_ENDPOINT") + "/" + id)
                 .then()
                 .extract()
                 .body()
                 .jsonPath()
-                .getObject("$", Character.class);
-    }
-
-    public Character getCharactersByName(String name, int number) {
-        return RestAssured.given()
-                .when()
-                .get("character?name=" + name)
-                .then()
-                .extract()
-                .body()
-                .jsonPath()
-                .getObject("results[" + number + "]", Character.class);
+                .getObject(prop.getProp("RICK_AND_MORTY_ROOT_PATH"), Character.class);
     }
 
     public Character getCharactersByName(String name) {
         return RestAssured.given()
                 .when()
-                .get("character?name=" + name)
+                .get(prop.getProp("RICK_AND_MORTY_CHARACTER_ENDPOINT") + "?name=" + name)
                 .then()
                 .extract()
                 .body()
                 .jsonPath()
-                .getObject("results[0]", Character.class);
+                .getObject(prop.getProp("RICK_AND_MORTY_FIRST_RESULT_PATH"), Character.class);
     }
 
     public String getUrlFromCharacterClass(Character character) {
-        return character.episode.getLast();
+        return character.episode.get(character.episode.size() - 1);
     }
 
     public String numberByUrl(String episodeUrl) {
@@ -51,12 +45,20 @@ public class RickAndMortyApiSteps {
     public Episode getEpisodeByNumber(String episodeNumber) {
         return RestAssured.given()
                 .when()
-                .get("episode/" + episodeNumber)
+                .get(prop.getProp("RICK_AND_MORTY_EPISODE_ENDPOINT") + "/" + episodeNumber)
                 .then()
                 .extract()
                 .body()
                 .jsonPath()
-                .getObject("$", Episode.class);
+                .getObject(prop.getProp("RICK_AND_MORTY_ROOT_PATH"), Episode.class);
     }
 
+    public String getLastCoworkerByName(String characterName) {
+        ArrayList<String> charactersList = getEpisodeByNumber(
+                numberByUrl(
+                        getUrlFromCharacterClass(
+                                getCharactersByName(characterName))))
+                .characters;
+        return charactersList.get(charactersList.size() - 1);
+    }
 }
